SYNC-356 - Refactoring of SyncUtil and SyncIngestServiceImpl to make things easier to follow.  Also results in more strict behavior (eg. errors thrown if a property value is not found, rather than just logging a trace and setting to null).  This results in unit test failures that were not properly using data that both parent and child were aware of, which has been fixed.